# flutter_native_view

./: CHANGELOG.md  README.md  pubspec.yaml
.github/: FUNDING.yml
core/: ffi_api.cc  ffi_api.h  native_view_container.cc  native_view_container.h  native_view_core.cc  native_view_core.h  native_view_subclass_proc.cc  native_view_subclass_proc.h  utils.cc  utils.h
example/: pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_native_view.dart
lib/src/: channel.dart  constants.dart  ffi.dart  flutter_native_view.dart  native_view_controller.dart  value_notifiers.dart  widgets.dart
windows/: CMakeLists.txt  flutter_native_view_plugin.cc  flutter_native_view_plugin.cpp  native_view_core.cc  native_view_core.h
windows/include/flutter_native_view/: flutter_native_view_plugin.h
